[tool.poetry]
name = "keywordsai-exporter-braintrust"
version = "0.1.0"
description = "Keywords AI exporter for Braintrust logs"
authors = ["Raymond Huang <raymond@keywordsai.co>"]
readme = "README.md"
packages = [{include = "keywordsai_exporter_braintrust", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
braintrust = "^0.5.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
