[tool.poetry]
name = "keywordsai-exporter-litellm"
version = "0.1.0"
description = ""
authors = ["Raymond Huang <raymond@keywordsai.co>"]
readme = "README.md"
packages = [{include = "keywordsai_exporter_litellm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
